translated some stuff, added links, and translated xome things

--- a/views/aboutCN.hbs
+++ b/views/aboutCN.hbs
@@ -85,13 +85,13 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contact"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/about"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutCN"></a>
         </li>
     </ul>
 
