--- a/views/skillsCN.hbs
+++ b/views/skillsCN.hbs
@@ -44,24 +44,24 @@
     <!--Dropdown for site navigation-->
 <div class="dropdown">
     <button class="btn peach-gradient btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Seitennavigation
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortDE">Webentwicklung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
+        </li>
+        <li class="presentation">
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceDE">Erfahrung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationDE">Ausbildung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoDE">Fotographie</a>
-        </li>
-        <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoDE">Video</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -70,22 +70,25 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/skills"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/skillsFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutCN"></a>
         </li>
     </ul> 
 </nav>
