--- a/views/webPortCN.hbs
+++ b/views/webPortCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
-    <a class="navbar-brand" href="/homeCN">Eric Willard</a>
+    <a class="navbar-brand" href="/homeCN">艾瑞克 - Web开发</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -44,24 +44,24 @@
 <!--Dropdown for site navigation-->
 <div class="dropdown">
     <button class="btn peach-gradient btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Seitennavigation
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceDE">Erfahrung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationDE">Ausbildung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoDE">Fotographie</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/photoCN">摄影</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsDE">Fähigkeiten</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoDE">Video</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
@@ -73,19 +73,22 @@
             <a class="nav-link" href="/webPort"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/webPortFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutCN"></a>
         </li>
     </ul>
     
@@ -160,12 +163,12 @@
 
 
                 <div class="card-body">
-                <p id="card-text">Innovative Photos/创新照片</p>
+                <p id="card-text">创新照片</p>
                 </div>
             </div></a>
         </div>
         <!--End Left Column Panel-->
 
 <footer class="footer danger-color">
-    © Eric Willard
+    © 艾瑞克
 </footer>
