--- a/views/photoCN.hbs
+++ b/views/photoCN.hbs
@@ -41,39 +41,43 @@
         </li>
     </ul>
 
-    <!--Dropdown for site navigation-->
+<!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn peach-gradient btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Seitennavigation
+    <button class="btn peach-gradient btn-lg dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        网站导航
     </button>
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortDE">Webentwicklung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/webPortCN">Web开发</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceDE">Erfahrung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/experienceCN">经历</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationDE">Ausbildung</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/educationCN">教育</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsDE">Fähigkeiten</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/skillsCN">技能</a>
         </li>
         <li role="presentation">
-            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoDE">Video</a>
+            <a class="dropdown-item" role="menuitem" tabindex="-1" href="/videoCN">视频</a>
         </li>
     </ul>
 </div>
 <!--End Dropdown Button-->
 
-    <!-- Language Links -->
+
+   <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/photo"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/photoFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
