--- a/views/contactDE.hbs
+++ b/views/contactDE.hbs
@@ -75,6 +75,9 @@
             <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/contactCN"><span class="flag-icon flag-icon-cn"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
