--- a/views/education.hbs
+++ b/views/education.hbs
@@ -70,6 +70,9 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/educationCN"><span class="flag-icon flag-icon-cn"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/educationDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
