--- a/views/educationFR.hbs
+++ b/views/educationFR.hbs
@@ -73,6 +73,9 @@
             <a class="nav-link" href="/education"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/educationCN"><span class="flag-icon flag-icon-cn"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/educationDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
