--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -70,10 +70,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/skillsDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/homeCN"><span class="flag-icon flag-icon-cn"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/skillsFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
