--- a/views/homeCN.hbs
+++ b/views/homeCN.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl color-danger">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
     <a class="navbar-brand" href="/homeCN">艾瑞克 - 关于</a>
 
     <!-- Social Media Contact Links-->
