--- a/views/aboutCN.hbs
+++ b/views/aboutCN.hbs
@@ -260,6 +260,6 @@
         </div>
     </div>
     <footer class="footer danger-color">
-        © Copyright 2019 Eric Willard
+        © 艾瑞克
     </footer>
     </div>
