--- a/views/contactCN.hbs
+++ b/views/contactCN.hbs
@@ -84,14 +84,14 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
+                <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutDE">
+                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutCN">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/contactDE"></a>
+                <a class="nav-link glyphicon glyphicon-book" href="/contactCN"></a>
             </li>
         </ul>
         <!-- links -->
@@ -142,5 +142,5 @@
         </div>
     </div>
     <footer class="footer danger-color">
-        © Copyright 2019 Eric Willard
+        © 艾瑞克
     </footer>
