--- a/views/photoCN.hbs
+++ b/views/photoCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
-    <a class="navbar-brand" href="/homeCN">Eric Willard</a>
+    <a class="navbar-brand" href="/homeCN">艾瑞克 - 摄影</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -83,13 +83,13 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-home" href="/homeDE"></a>
+            <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactCN"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutCN"></a>
         </li>
     </ul>
     <!-- End Nav & lang links-->
@@ -376,5 +376,5 @@
     <!--End 3rd Row-->
 </div>
 <footer class="footer danger-color">
-    © Eric Willard
+    © 艾瑞克
 </footer>
