--- a/views/skillsCN.hbs
+++ b/views/skillsCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl peach-gradient">
-    <a class="navbar-brand" href="/homeCN">艾瑞克</a>
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
+    <a class="navbar-brand" href="/homeCN">艾瑞克 - 技能</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
@@ -214,6 +214,6 @@
         </div>
     </div>
 </div>
-<footer class="footer peach-gradient">
-    © Eric Willard
+<footer class="footer danger-color">
+    © 艾瑞克
 </footer>
