fixed some links and translated contact page in chinese

--- a/views/contactDE.hbs
+++ b/views/contactDE.hbs
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="send">
-                            <button type="submit" class="btn btn-info">versenden</button>
+                            <button type="submit" class="btn btn-info">senden</button>
                         </div>
 
                     </form>
