--- a/views/homeCN.hbs
+++ b/views/homeCN.hbs
@@ -74,11 +74,11 @@
 
             <!--Left Column Top-->
             <!--Web Development-->
-            <a href="/webPortDE">
+            <a href="/webPortCN">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="WebDevSS" src="../Images/clicktripUI.png">
                     <div class="card-title">
-                        <p id="card-text">Webentwicklung<i class="glyphicon glyphicon-globe"></i></p>
+                        <p id="card-text">Web开发<i class="glyphicon glyphicon-globe"></i></p>
                     </div>
             </div></a>
 
@@ -90,11 +90,11 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Experience-->
-            <a href="/experienceDE">
+            <a href="/experienceCN">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="experiencePic" src="../Images/CNBacktoSchool1.jpg">
                     <div class="card-title">
-                        <p id="card-text">Erfahrung<i class="glyphicon glyphicon-ok"></i></p>
+                        <p id="card-text">经历<i class="glyphicon glyphicon-ok"></i></p>
                     </div>
             </div></a>
             <!--End Experience-->
@@ -107,11 +107,11 @@
         <!--Right Column-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Education-->
-            <a href="/educationDE">
+            <a href="/educationCN">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="gradPic" src="../Images/Graduation-UCSD-Me.jpg">
                     <div class="card-title">
-                        <p id="card-text">Ausbildung<i class="glyphicon glyphicon-education"></i></p>
+                        <p id="card-text">教育<i class="glyphicon glyphicon-education"></i></p>
                     </div>
             </div></a>
             <!--End Education-->
@@ -123,13 +123,13 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Photography Panel-->
-            <a href="/photoDE">
+            <a href="/photoCN">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="meShooting" src="../Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
                     </div> -->
                     <div class="card-title">
-                        <p id="card-text">Fotographie<i class="glyphicon glyphicon-camera"></i></p>
+                        <p id="card-text">摄影<i class="glyphicon glyphicon-camera"></i></p>
                     </div>
             </div></a>
             <!--End Photography-->
@@ -138,12 +138,12 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
             <!--Skills Panel-->
-            <a href="/skillsDE">
+            <a href="/skillsCN">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="skillsPic" src="../Images/skillsPic.jpg">
 
                     <div class="card-title">
-                        <p id="card-text">Fähigkeiten<i class="glyphicon glyphicon-star"></i></p>
+                        <p id="card-text">技能<i class="glyphicon glyphicon-star"></i></p>
                     </div>
             </div></a>
             <!--End Skills Panel-->
@@ -153,12 +153,12 @@
         <!--Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <!--Video Panel-->
-            <a href="/videoDE">
+            <a href="/videoCN">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Video<i class="glyphicon glyphicon-facetime-video"></i></p>
+                        <p id="card-text">视频<i class="glyphicon glyphicon-facetime-video"></i></p>
                     </div>
             </div></a>
             <!--End Video Panel-->
