--- a/views/contactCN.hbs
+++ b/views/contactCN.hbs
@@ -87,11 +87,11 @@
                 <a class="nav-link glyphicon glyphicon-home" href="/homeCN"></a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-envelope" href="/aboutCN">
+                <a class="nav-link glyphicon glyphicon-envelope" href="/contactCN">
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link glyphicon glyphicon-book" href="/contactCN"></a>
+                <a class="nav-link glyphicon glyphicon-book" href="/aboutCN"></a>
             </li>
         </ul>
         <!-- links -->
@@ -101,38 +101,38 @@
         <!-- <div class="row main-content"> -->
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1">
             <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
-                <div class="panel panel-header text-center" style="color: #00b8e6;">Contact<i class="glyphicon glyphicon-envelope"></i></div>
+                <div class="panel panel-header text-center" style="color: #00b8e6;">联络<i class="glyphicon glyphicon-envelope"></i></div>
                 <div class="panel panel-body">
 
                     <!-- Form contact -->
                     <form action="MAILTO:ewill2020@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
-                            <label for="form3">Name</label>
+                            <label for="form3">名称</label>
                             <input type="text" name="name" id="form3" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form2">E-mail</label>
+                            <label for="form2">电子邮件地址</label>
 
                             <input type="text" id="form2" name="mail" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form34">Betreff</label>
+                            <label for="form34">标题</label>
                             <input type="text" id="form32" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label for="form8">Ihre Nachricht</label>
+                            <label for="form8">信息</label>
                             <br>
                             <textarea type="text" id="form8" name="message" class="md-textarea" style="height: 100px"></textarea>
 
                         </div>
 
                         <div class="send">
-                            <button type="submit" class="btn btn-info">versenden</button>
+                            <button type="submit" class="btn btn-info">提交</button>
                         </div>
 
                     </form>
