--- a/views/educationCN.hbs
+++ b/views/educationCN.hbs
@@ -107,12 +107,12 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                 <div class="card-title">
-                    Kansas Universität
+                    堪萨斯大学
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
-                        <li>Coding Boot Camp</li>
-                        <li>Juni 2017-Mai 2018</li>
+                        <li>编码训练营</li>
+                        <li>六月 2017-五月 2018</li>
                         <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
                         <ul>
                 </div>
@@ -127,11 +127,11 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
                 <div class="card-title">
-                    Universität von Kalifornien San Diego
+                    加州大学圣地亚哥分校
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
-                        <li>Bachelor of Arts</li>
-                        <li>September 2012-August 2014</li>
+                        <li>文科学士学位</li>
+                        <li>九月 2012-八月 2014</li>
                         <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
                     </ul>
                 </div>
@@ -147,12 +147,12 @@
             <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
                 <div class="card-title">
-                    Fullerton Universität
+                    富勒顿学院
                 </div>
                 <div class="card-body">
                     <ul style="list-style-type:disc;">
-                        <li>Associate in Arts in Film</li>
-                        <li>Janjuar 2009-Mai 2012</li>
+                        <li>艺术助理</li>
+                        <li>一月 2009-五月 2012</li>
                         <li>Am Fullerton College war ich stolz darauf, während 2/3 meines Studiums an der Institution sowohl den Status eines Präsidenten als auch eines Dekans zu erhalten. Ich habe Film studiert, aber auch Deutsch, Französisch und Spanisch studiert und im Alleingang ein Video produziert, um die Abteilung für Auslandsstudien zu promoten. In den folgenden Jahren habe ich sowohl in Paris, Frankreich als auch in Berlin, Deutschland, studiert, was meine Sprachkenntnisse stärkte und mir ein besseres Verständnis für die fremde Kultur verschaffte.</li>
                     </ul>
                 </div>
