translated photoCN completely, needs to be checked

--- a/views/photoCN.hbs
+++ b/views/photoCN.hbs
@@ -108,14 +108,14 @@
                     <img class="card-img-top img-fluid" id="shellHaus" src="../Images/BerlinShellhausdoneOrange2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                The "Shell-Haus" in Berlin with some changed colors and modified in a way that makes it take on a completely different identity.
+                                柏林的“Shell-Haus”改变了一些颜色，并以某种方式进行了修改，使其具有完全不同的身份。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Shell-Haus
+                    贝壳馆
                 </div>
             </div>
         </div>
@@ -130,14 +130,14 @@
                     <img class="card-img-top img-fluid" id="HKLights" src="../Images/CNHKNightStreaks.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Busy criss-crossing streets in Hong Kong at night provide for a beautiful setting of streaks and skyscrapers.
+                                香港夜间繁忙的纵横交错的街道为条纹和摩天大楼提供了美丽的环境。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Streaks & Skyscrapers
+                    条纹和摩天大楼
                 </div>
             </div>
         </div>
@@ -152,14 +152,14 @@
                     <img class="card-img-top img-fluid" id="DieWelle" src="../Images/DEDieWelle2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An office building in Hamburg, Germany known as "Die Welle" (The Wave).  It was a beautiful and interesting building to photograph and easily missed if one doesn't know its location.
+                                位于德国汉堡的办公楼，名为“Die Welle”（The Wave）。 如果一个人不知道它的位置，这是一个美丽而有趣的建筑物，可以拍摄并容易错过。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Die Welle
+                    浪潮
                 </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
                     <img class="card-img-top img-fluid" id="Singel" src="../Images/NLAmsterdamCanalScape2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An area in Amsterdam known as "Singel" and is near the heart of the city.  The colors at night along with the houseboats and reflection from the canal are simply awesome.
+                                阿姆斯特丹的一个地区被称为“Singel”，靠近市中心。 夜晚的颜色以及船屋和运河的反射都非常棒。
                             </p>
                         </div>
                 </div>
@@ -201,14 +201,14 @@
                 <img class="card-img-top img-fluid" id="redHat" src="../Images/KoreanHat.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            A friend of mine with her back turned to the camera wearing a bright red hat.
+                            我的一个朋友带着她的后背转向戴着鲜红色帽子的相机。
                         </p>
                     </div>
             </div>
             <!--End Hover Description-->
 
             <div class="card-title">
-                Chapeau Rouge
+                红帽
             </div>
         </div>
         </div>
@@ -223,14 +223,14 @@
                     <img class="card-img-top img-fluid" id="HorseShoe" src="../Images/AZHSBHDR.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Located near the famous Antelope Canyon this spot is known as Horseshoe Bend in northern Arizona.
+                                这个地点位于着名的羚羊峡谷附近，被称为亚利桑那州北部的马蹄湾。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Horseshoe Bend
+                    马蹄形弯
                 </div>
             </div>
         </div>
@@ -245,14 +245,14 @@
                     <img class="card-img-top img-fluid" id="Tron" src="../Images/CNTron.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A building named the "White Horse Convention Center" in Hangzhou, China is illuminated in a way that invokes memories of the movie Tron.
+                                在中国杭州，一座名为“白马会议中心”的建筑被照亮了电影Tron的回忆。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Tron
+                    特隆
                 </div>
             </div>
         </div>
@@ -267,14 +267,14 @@
                     <img class="card-img-top img-fluid" id="Kanzler" src="../Images/BerlinWashingMachineRV.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                The Bundeskanzleramt in Berlin, Germany where the Chancellor of Germany works.  This part of the building is known as the "Washing Machine" due to its circular nature.
+                                联邦总理府在德国柏林德国总理工作的地方。 由于其圆形特性，该建筑的这一部分被称为“洗衣机”。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    The Washing Machine
+                    那洗衣机
                 </div>
             </div>
         </div>
@@ -294,14 +294,14 @@
                 <img class="card-img-top img-fluid" id="Groningen" src="../Images/NLGroningenColors1.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Some colored houses with a great reflection near a shopping mall in the small Dutch city of Groningen.
+                            有一个伟大的反射的一些色的房子在一个商城附近在小荷兰市格罗宁根。
                         </p>
                     </div>
             </div>
             <!--End Hover Description-->
 
             <div class="card-title">
-                Groningen Kleuren
+                格罗宁根颜色
             </div>
         </div>
         </div>
@@ -316,14 +316,14 @@
                     <img class="card-img-top img-fluid" id="Macau" src="../Images/MacauGreenTwist.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A random apartment building in Macau taken in a vertical panorama style causing the edges to extrude a bit.
+                                澳门的一个随意的公寓楼采用垂直的全景风格，使边缘挤出一点。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Green Twist
+                    绿色扭曲
                 </div>
             </div>
         </div>
@@ -338,14 +338,14 @@
                     <img class="card-img-top img-fluid" id="Crucifix" src="../Images/MacauFlyingCrucifix3.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Another random apartment building shot from inside the courtyard in Macau.  The buildings above looked very interesting and seem to form a crucifix.
+                                另一座随意的公寓楼从澳门庭院内射来。 上面的建筑看起来非常有趣，似乎形成一个十字架。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Flying Crucifix
+                    飞行十字架
                 </div>
             </div>
         </div>
@@ -360,14 +360,14 @@
                     <img class="card-img-top img-fluid" id="Dunes" src="../Images/COSandDunesBeerBackpack.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A photo of my camera backpack with traveling beer at the Great Sand Dunes outside of Alamosa, Colorado.
+                                我的照相机背包照片用在伟大的沙丘的旅行的啤酒在Alamosa，科罗拉多外面。
                             </p>
                         </div>
                 </div>
                 <!--End Hover Description-->
 
                 <div class="card-title">
-                    Beer, Backpack, and Dunes
+                    啤酒，背包和沙丘
                 </div>
             </div>
         </div>
