--- a/views/experienceCN.hbs
+++ b/views/experienceCN.hbs
@@ -107,8 +107,8 @@
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Professor - English & Web Development</li>
-                                <li>May 2018-May 2019</li>
+                                <li>教授 - 英语和网络发展</li>
+                                <li>五月 2018-五月 2019</li>
                                 <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
                                 </li>
                             </ul>
@@ -122,12 +122,12 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                     <div class="card-title">
-                        Kansas University
+                        堪萨斯大学
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Student - Full-Stack Web Development Program</li>
-                                <li>June 2017-May 2018</li>
+                                <li>学生 - 全栈Web开发计划</li>
+                                <li>六月 2017-五月 2018</li>
                                 <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
                                 </li>
                             </ul>
