added a button and did some translating

--- a/views/educationCN.hbs
+++ b/views/educationCN.hbs
@@ -1,6 +1,6 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
-    <a class="navbar-brand" href="/homeCN">艾瑞克 - 教育</a>
+    <a class="navbar-brand" href="/homeCN">艾瑞克</a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-start mr-auto list-inline">
