--- a/views/aboutDE.hbs
+++ b/views/aboutDE.hbs
@@ -43,7 +43,7 @@
 
 <!--Dropdown for site navigation-->
 <div class="dropdown">
-    <button class="btn btn-light btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-dark btn-large dropdown-toggle" type="button" id="nav-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Seitennavigation
     </button>
 
@@ -260,6 +260,6 @@
         </div>
     </div>
     <footer class="footer sunny-morning-gradient">
-        © Copyright 2019 Eric Willard
+        © Eric Willard
     </footer>
     </div>
