--- a/views/contactCN.hbs
+++ b/views/contactCN.hbs
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl danger-color">
-        <a class="navbar-brand" href="/homeCN">艾瑞克 - 联系</a>
+        <a class="navbar-brand" href="/homeCN">艾瑞克</a>
 
         <!-- Social Media Contact Links-->
         <ul class="navbar-collapse justify-content-start mr-auto list-inline">
