--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -46,6 +46,9 @@
             <a class="nav-link" href="/home"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
+            <a class="nav-link" href="/homeCN"><span class="flag-icon flag-icon-cn"></span></a>
+        </li>
+        <li class="nav-item list-item-inline">
             <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
