--- a/views/homeCN.hbs
+++ b/views/homeCN.hbs
@@ -43,13 +43,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/home"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/homeDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/homeFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
